--- a/docs/locale/es/LC_MESSAGES/primer/index.po
+++ b/docs/locale/es/LC_MESSAGES/primer/index.po
@@ -49,8 +49,8 @@ msgid ""
 msgstr ""
 "Quienes desconocen el concepto de beneficiario final querrán saber :doc:`de "
 "qué se trata <whatisbo>` y :doc:`por qué es importante <whyisbo>`. Viendo "
-"entonces :doc:`los datos que se necesitan <whatisbodata>` para describir una"
-" cadena de titularidad de beneficiarios finales, podemos :doc:`entender el "
+"entonces :doc:`qué datos se necesitan <whatisbodata>` para describir una "
+"cadena de titularidad de beneficiarios finales, podemos :doc:`entender el "
 "Estándar de Datos sobre Beneficiarios Finales <whatisthebods>` como un tipo "
 "de plantilla. Por último, veremos el :doc:`alcance del Estándar "
 "<whatdoesbodscover>` y lo que ofrece."
