--- a/docs/locale/es/LC_MESSAGES/primer/whatisthebods.po
+++ b/docs/locale/es/LC_MESSAGES/primer/whatisthebods.po
@@ -35,8 +35,8 @@ msgid ""
 "and different countries can then be combined, visualised, explored and "
 "analysed."
 msgstr ""
-"El valor de los datos de beneficiarios finales surge cuando podemos "
-"compartirlos con facilidad, sabiendo que serán debidamente comprendidos. "
+"El valor de los datos sobre beneficiarios finales surge cuando podemos "
+"compartirlos con facilidad, sabiendo que serán comprendidos correctamente. "
 "Así, los datos de diferentes empresas y países pueden combinarse, "
 "visualizarse, investigarse y analizarse."
 
@@ -54,9 +54,9 @@ msgid ""
 " extremely difficult, expensive and time-consuming."
 msgstr ""
 "Reunir datos de diversas fuentes puede darnos una idea de las vastas o "
-"complejas estructuras de titularidad y control. Pero sin estándares comunes,"
-" combinar y analizar datos de fuentes diferentes puede resultar sumamente "
-"difícil y costoso, y requerir mucho tiempo."
+"complejas estructuras de titularidad y control. Sin embargo, en ausencia de "
+"estándares comunes, combinar y analizar datos de fuentes diferentes puede "
+"resultar sumamente difícil y costoso, y exigir mucho tiempo."
 
 # cf1c32074e1d4b2cbe9b869aef0331ee
 #: ../../primer/whatisthebods.rst:27
@@ -148,4 +148,4 @@ msgid ""
 msgstr ""
 "El **Estándar de Datos sobre Beneficiarios Finales** detalla qué datos "
 "deberían compartirse y cómo hacerlo (utilizando un esquema JSON) y ofrece "
-"orientación sobre los procesos de publicación de datos y su uso."
+"orientación sobre los procesos de publicación de datos y el uso de éstos."
