--- a/docs/locale/es/LC_MESSAGES/about/governance.po
+++ b/docs/locale/es/LC_MESSAGES/about/governance.po
@@ -3,13 +3,18 @@
 # This file is distributed under the same license as the Beneficial Ownership Data Standard package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Javier Sarquis <sarquis.translations@gmail.com>, 2020
+# Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Beneficial Ownership Data Standard 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-06-17 11:38+0100\n"
+"POT-Creation-Date: 2019-09-06 12:18+0000\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
+"Last-Translator: Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -17,17 +22,19 @@ msgstr ""
 "Language: es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-# 86f0d3eb3d5740428ef31389fdc4f2fc
+# 975872dd2ca94af28dff92220ce24aee
 #: ../../about/governance.rst:2
 msgid "Governance"
-msgstr ""
+msgstr "Gobernanza"
 
-# ecd98c315ed04a1794c37fa3ebfd666e
+# 62a10df60dc3445e86ea3e3dad8b0962
 #: ../../about/governance.rst:6
 msgid "Data Standard Working Group - abbreviated Terms of Reference (2016)"
 msgstr ""
+"Grupo de Trabajo sobre Estándares de Datos - versión abreviada de los "
+"Términos de Referencia (2016)"
 
-# 70b7d652528b476fad83b76d04b91ffd
+# c06334b2389b49b28dfde65f0f7a95ea
 #: ../../about/governance.rst:8
 msgid ""
 "The Beneficial Ownership Data Standard Working Group (DSWG) will drive the "
@@ -39,8 +46,17 @@ msgid ""
 "public sector and civil society working groups <http://openownership.org"
 "/get-involved/>`_."
 msgstr ""
+"El Grupo de Trabajo sobre Estándares de Datos sobre Beneficiarios Finales "
+"(DSWG por sus siglas en inglés) impulsará el desarrollo inicial de un "
+"estándar de datos libres y abiertos sobre beneficiarios finales destinado a "
+"reducir los obstáculos técnicos que inciden en la recopilación y "
+"reutilización de los datos sobre beneficiarios finales, por ejemplo, por "
+"parte del `Registro de OpenOwnership <http://openownership.org/>`_ que viene"
+" desarrollando la sociedad civil en todo el mundo. OpenOwnership también "
+"está `creando grupos de trabajo en el sector privado, el sector público y la"
+" sociedad civil <http://openownership.org/get-involved/>`_."
 
-# dc4a7b560fc642fca234e1752e3885b7
+# 627be3faae804efa9ab9023589e78fa3
 #: ../../about/governance.rst:10
 msgid ""
 "This working group will include stakeholders from a range of backgrounds "
@@ -52,109 +68,137 @@ msgid ""
 " that relevant requirements, user needs and technical considerations are "
 "taken into account."
 msgstr ""
+"Este grupo de trabajo incluirá a partes interesadas de diversos contextos "
+"que tengan interés y sean expertas en datos relativos al control societario "
+"o los beneficiarios finales, y al uso de dichos datos en pos del interés "
+"general. Si bien el desarrollo del estándar se llevará a cabo mediante un "
+"proceso abierto, al que cualquiera podrá contribuir, los miembros del grupo "
+"de trabajo asumen la responsabilidad especial de orientar dicho desarrollo y"
+" garantizar que se tengan en cuenta los requisitos, las necesidades de los "
+"usuarios y las cuestiones técnicas pertinentes. "
 
-# 13841c669d0843369aa1224316f12367
+# fd55f1a9ab794f43a936e051aa460eaa
 #: ../../about/governance.rst:14
 msgid "Values"
-msgstr ""
+msgstr "Valores"
 
-# e8ae086e13b944c88789c13f11b28f24
+# c685b2de47a04ae3bd466ddb5fe15ac9
 #: ../../about/governance.rst:16
 msgid ""
 "All working group members must commit to support the following shared "
 "values."
 msgstr ""
+"Todos los miembros del grupo de trabajo deben comprometerse a apoyar los "
+"siguientes valores compartidos."
 
-# 9575160962264deeaf66699f004032c6
+# 75718ff933c84640b0bfd65daaeedcb0
 #: ../../about/governance.rst:18
 msgid "**Open**"
-msgstr ""
+msgstr "**Apertura**"
 
-# 9f2507b0864741a5b5e55d6a1e7418d2
-# 14ff3e4431734ec8a16d7b9de38815f8
+# a832ba46e6fc4fcd983dc89c8b083901
+# 8e7aa0ea8c1c45acb99f0fe77b98b4bd
 #: ../../about/governance.rst:20 ../../about/governance.rst:28
 msgid "We will:"
-msgstr ""
+msgstr "Nos aseguraremos de:"
 
-# 3fa6735683784219ac04fecbeb70ca0d
+# 38510693c5ad44d38dd75d29baaca73c
 #: ../../about/governance.rst:22
 msgid "share our views and plans, and share knowledge as widely as possible;"
 msgstr ""
+"comunicar nuestras perspectivas y planes, y compartir conocimientos de la "
+"forma más amplia posible;"
 
-# cd184a603f814679bd38cdb55b43123b
+# 6734d6a2e945429c8a6873f6ef673cba
 #: ../../about/governance.rst:23
 msgid "solicit and listen to views from end users and stakeholders;"
 msgstr ""
+"procurar y escuchar las opiniones de los usuarios finales y las partes "
+"interesadas;"
 
-# d78723994704435e833389b9fe8a13c9
+# f0364f029a414e3792db37dbeac35d5b
 #: ../../about/governance.rst:24
 msgid ""
 "make our outputs available under an open licence and abide by the project "
 "`contributor agreement <https://github.com/openownership/data-"
 "standard/blob/master/CONTRIBUTING.md>`_;"
 msgstr ""
+"poner a disposición nuestros desarrollos bajo una licencia abierta y cumplir"
+" con `el convenio de contribución  <https://github.com/openownership/data-"
+"standard/blob/master/CONTRIBUTING.md>`_ del proyecto."
 
-# 950a23e0b233437c99e42bc58598e145
+# 5b6f3203f7a04ce882f064c1f918be80
 #: ../../about/governance.rst:26
 msgid "**Expert**"
-msgstr ""
+msgstr "**Pericia**"
 
-# 448aee7d9c3749a3a3d1b911348e3dab
+# 96a3d695547f42849af101450fa90978
 #: ../../about/governance.rst:30
 msgid "bring our expertise to the discussion as individuals;"
-msgstr ""
+msgstr "aportar nuestra pericia al debate como individuos;"
 
-# 5e3d6bd5a9fb4ac49fe77613a267ab5a
+# 44ce0326612548d28ad135c0c1afa8c6
 #: ../../about/governance.rst:31
 msgid ""
 "use our expertise to synthesise the views of others in constructive and "
 "forward-thinking proposals;"
 msgstr ""
+"utilizar nuestra pericia para resumir los puntos de vista de los demás en "
+"propuestas constructivas y con visión de futuro;"
 
-# a9f3b9daa22a4ab2b6beec1b305ffd7b
+# 68e482e05d7f4d658526d83e245c0263
 #: ../../about/governance.rst:32
 msgid "use good judgement to respect privacy and confidentiality."
 msgstr ""
+"proceder con buen juicio a fin de respetar la privacidad y la "
+"confidencialidad."
 
-# 38c621ea93004262a2c3f4794564456e
+# 1e8210d7fd6d473d9a2072f52e61af63
 #: ../../about/governance.rst:34
 msgid "**Collaborative**"
-msgstr ""
+msgstr "**Colaboración**"
 
-# c0b62849132940f7be6d61dc5315d9c2
+# 94c5fba8931e4d9ba86a4670b9038272
 #: ../../about/governance.rst:36
 msgid "We will"
-msgstr ""
+msgstr "Nos aseguraremos de:"
 
-# f0582ab711a8401abfb07ad9ef51af7d
+# 95ac0b227d7c4e86aa2e0db86d592fe1
 #: ../../about/governance.rst:38
 msgid "support each other in discussion, in decisions, and in delivery;"
 msgstr ""
+"apoyarnos mutuamente en los debates, en las decisiones y en la ejecución;"
 
-# 21baddde13e14fed9b3aa0a52b064cb2
+# 99d65390c8c0481b909347848cbae7cf
 #: ../../about/governance.rst:39
 msgid "operate on the basis of consensus decision making;"
-msgstr ""
+msgstr "actuar sobre la base de la toma de decisiones por consenso;"
 
-# c59a54e304e6457aa1c7ca043a686ded
+# 2473447aa52a4da7879e5b1e15c7bb53
 #: ../../about/governance.rst:40
 msgid "constructively hold each other to account on our commitments;"
 msgstr ""
+"exigirnos los unos a los otros rendiciones de cuentas sobre nuestros "
+"compromisos de manera constructiva;"
 
-# 81a71450a95a47e887d84aab5ff7c16d
+# 260ff4f2ee2a4ddf933ebd609d610990
 #: ../../about/governance.rst:41
 msgid "ensure all voices are heard and considered carefully."
 msgstr ""
+"garantizar que todas las voces sean escuchadas y consideradas atentamente."
 
-# b8ad3fce6fa64db8818eae67774249d5
+# 4bc67143783b4a41a98547c063c7b73d
 #: ../../about/governance.rst:44
 msgid "Membership, term and role"
-msgstr ""
+msgstr "Condición de miembro, duración del mandato y roles"
 
-# 50b6c00192b54e72a26b338467d35cf1
+# a694c0e71012457ab16d181668f4a887
 #: ../../about/governance.rst:46
 msgid ""
 "Membership of the working group is a voluntary responsibility. Members "
 "should be prepared to commit up to 5 hours a month, join group calls and "
 "respond to issues."
 msgstr ""
+"Ser miembro del grupo de trabajo es una responsabilidad voluntaria. Los "
+"integrantes deben estar dispuestos a dedicar hasta 5 horas al mes, "
+"participar de las llamadas grupales y actuar frente a los problemas."
