--- a/docs/locale/es/LC_MESSAGES/about/index.po
+++ b/docs/locale/es/LC_MESSAGES/about/index.po
@@ -3,6 +3,10 @@
 # This file is distributed under the same license as the Beneficial Ownership Data Standard package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Javier Sarquis <sarquis.translations@gmail.com>, 2020
+# Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020
+# 
 #, fuzzy
 msgid ""
 msgstr ""
@@ -10,6 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-07 15:29+0000\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
+"Last-Translator: Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,7 +25,7 @@ msgstr ""
 # b25a5fc33ec64d3693aa1adf1fa2816a
 #: ../../about/index.rst:2
 msgid "About"
-msgstr ""
+msgstr "¿De qué se trata?"
 
 # 1f7582f351404c70b369829a8b94d0ad
 #: ../../about/index.rst:4
@@ -30,11 +35,16 @@ msgid ""
 "a structured template for describing beneficial ownership as machine-"
 "readable data."
 msgstr ""
+"Este sitio web contiene un borrador de la especificación del Estándar de "
+"Datos sobre Beneficiarios Finales (versión 0.2) , además de ayuda para su "
+"uso. El Estándar ofrece una plantilla estructurada para presentar "
+"información sobre los beneficiarios finales en forma de datos legibles por "
+"medios informáticos."
 
 # ab8f688c172240fc85778a2c3b67febe
 #: ../../about/index.rst:9
 msgid "Background"
-msgstr ""
+msgstr "Antecedentes"
 
 # 5f98163f0eb7486188f0d9a84b81f82a
 #: ../../about/index.rst:12
@@ -44,6 +54,11 @@ msgid ""
 " government and business can all benefit from greater transparency around "
 ":ref:`beneficial ownership <what-is-bo>`."
 msgstr ""
+"El lavado de dinero, la evasión fiscal y las cadenas de titularidad poco "
+"claras son problemas transnacionales que exigen una solución transnacional. "
+"Tanto la sociedad civil como el gobierno y las empresas pueden beneficiarse "
+"de una mayor transparencia en torno a los :ref:`beneficiarios finales <what-"
+"is-bo>`."
 
 # 7eb879e1c9bc4ed19e3af8939223cda8
 #: ../../about/index.rst:14
@@ -53,6 +68,11 @@ msgid ""
 "publishing beneficial ownership data, resulting in data that is "
 "interoperable, more easily reused, and of higher quality."
 msgstr ""
+"El Estándar de Datos sobre Beneficiarios Finales posibilita esa "
+"transparencia al establecer un sólido marco conceptual y práctico para la "
+"recolección y publicación de datos sobre beneficiarios finales, lo que "
+"redunda en la generación de datos interoperables, de más fácil reutilización"
+" y de mayor calidad."
 
 # a9f64f1ca06d4f919ee7f70da3efd440
 #: ../../about/index.rst:16
@@ -61,11 +81,14 @@ msgid ""
 "<governance>` co-chaired by OpenOwnership. More details about the "
 "organisation are available at www.openownership.org."
 msgstr ""
+"El Estándar está siendo desarrollado bajo la dirección de un :doc:`grupo de "
+"trabajo <governance>` copresidido por OpenOwnership. Para saber más sobre la"
+" organización, visite www.openownership.org."
 
 # 5dfafd71de4b4ec186211a9b7b7fd881
 #: ../../about/index.rst:21
 msgid "Current status of the standard"
-msgstr ""
+msgstr "Estado actual del estándar"
 
 # 97801094d755465f92699673b665a14f
 #: ../../about/index.rst:26
@@ -73,6 +96,9 @@ msgid ""
 "This is v0.2 of the Beneficial Ownership Data Standard. The data model has "
 "been updated and additional codelist information added since v0.1."
 msgstr ""
+"Esta es la vers. 0.2 del Estándar de Datos sobre Beneficiarios Finales. El "
+"modelo de datos se ha actualizado y se ha agregado información adicional de "
+"la lista de códigos respecto de la vers. 0.1."
 
 # c164bf78ddd04a2c8609380b03ea770b
 #: ../../about/index.rst:29
@@ -83,6 +109,12 @@ msgid ""
 "consultation. A clear :ref:`changelog <changelog>` is provided, and the "
 "documentation of previous versions is maintained in archive form."
 msgstr ""
+"Cabe señalar a los implementadores que se esperan cambios a futuro antes de "
+"la publicación de la versión 1.0. Sin embargo, a partir del lanzamiento de "
+"la vers. 0.1, todo cambio estructural o modificación importante de las "
+"definiciones solo se lleva a cabo con previa consulta. Se brinda un "
+":ref:`registro de modificaciones <changelog>` claro, y se mantiene la "
+"documentación de versiones anteriores a modo de archivo."
 
 # 85756ec5417e4d2bbc329f01771e18d7
 #: ../../about/index.rst:36
@@ -90,11 +122,13 @@ msgid ""
 "The schema contains a structure, fields and codelists but does not yet "
 "enforce validation constraints on most fields."
 msgstr ""
+"El esquema incluye una estructura, campos y listas de códigos, pero en la "
+"mayoría de los campos aún no impone restricciones de validación."
 
 # 8e07ce6390fe4ecf97a921fd9681b184
 #: ../../about/index.rst:41
 msgid "Get involved"
-msgstr ""
+msgstr "Involúcrese"
 
 # 0ea44d43df29461eba7d77a22ac02b04
 #: ../../about/index.rst:43
@@ -102,6 +136,9 @@ msgid ""
 "All changes to the standard draft, documentation and specification take "
 "place via GitHub at https://github.com/openownership/data-standard/."
 msgstr ""
+"Todos los cambios al borrador del estándar, a la documentación y a las "
+"especificaciones se llevan a cabo por medio de GitHub en "
+"https://github.com/openownership/data-standard/."
 
 # f1da8ca4afa64d46b422d44a7e45d563
 #: ../../about/index.rst:46
@@ -109,6 +146,9 @@ msgid ""
 "Suggestions for changes can be made via the `project issue tracker "
 "<https://github.com/openownership/data-standard/issues>`__."
 msgstr ""
+"Es posible sugerir cambios a través de la `herramienta de seguimiento de "
+"incidencias del proyecto <https://github.com/openownership/data-"
+"standard/issues>`__."
 
 # fe6c596a0abb4860a087a28089a86e09
 #: ../../about/index.rst:49
@@ -116,11 +156,13 @@ msgid ""
 "If you would like to be involved in the development and review of the "
 "Standard, see the :doc:`Governance <governance>` page."
 msgstr ""
+"Si desea participar en el desarrollo y la revisión del Estándar, consulte la"
+" página sobre :doc:`Gobernanza <governance>` ."
 
 # 5bcd641b24884ee1b41b05fab0d9e461
 #: ../../about/index.rst:63
 msgid "Partners and funders"
-msgstr ""
+msgstr "Socios y financiadores"
 
 # 29ca9f87f4fc46aeaf0f0ff14a26105c
 #: ../../about/index.rst:65
@@ -136,6 +178,16 @@ msgid ""
 "<https://www.globalwitness.org/en-gb/>`__ and `The B Team "
 "<http://bteam.org/>`__."
 msgstr ""
+"El desarrollo inicial del Estándar de Datos sobre Beneficiarios Finales fue "
+"financiado por OpenOwnership como parte de un proyecto subvencionado por el "
+"Departamento de Desarrollo Internacional del Reino Unido. OpenOwnership está"
+" encabezado por un grupo directivo de las principales organizaciones sobre "
+"transparencia del mundo, entre las que se incluyen `Transparencia "
+"Internacional <https://www.transparency.org/>`__, `OpenCorporates "
+"<https://opencorporates.com>`__, `One "
+"<https://www.one.org/international/>`__, `Open Contracting Partnership "
+"<http://www.open-contracting.org/es/>`__, `Global Witness "
+"<https://www.globalwitness.org/es/>`__ y `The B Team <http://bteam.org/>`__."
 
 # 1c0892ebe6604bbeb23aa8a7dc79ed11
 #: ../../about/index.rst:76
@@ -145,11 +197,15 @@ msgid ""
 "`OpenCorporates <https://opencorporates.com>`__. Read the :doc:`credits "
 "<credits>` for full details of the Standard's developers."
 msgstr ""
+"`Open Data Services Co-operative <http://www.opendataservices.coop>`__ y "
+"`OpenCorporates <https://opencorporates.com>`__ han desarrollado la "
+"especificación y la documentación. Consulte los :doc:`Créditos <credits>` "
+"para ver los detalles completos de los desarrolladores del Estándar."
 
 # 7181ac99734e4c38b1a0008b9c62dcff
 #: ../../about/index.rst:83
 msgid "License and contributor agreement"
-msgstr ""
+msgstr "Licencia y convenio de contribución"
 
 # 521acbbfa66c4fdbab4636707c460f87
 #: ../../about/index.rst:85
@@ -157,11 +213,14 @@ msgid ""
 "Schema contents of the OpenOwnership Register are Copyright 2016 World Wide "
 "Web Foundation on behalf of the OpenOwnership Steering Group."
 msgstr ""
+"Los contenidos del esquema del Registro de OpenOwnership están sujetos a "
+"derechos de autor de la Fundación World Wide Web (2016) en representación "
+"del Grupo Directivo de OpenOwnership."
 
 # 797c833096a145baa2ac6c61ae2ab2c2
 #: ../../about/index.rst:88
 msgid "The schema is licensed under the Apache License, Version 2.0."
-msgstr ""
+msgstr "El esquema se rige por la licencia Apache, versión 2.0."
 
 # 8a3d2ba06c784738b9d4624e9b9f0a8d
 #: ../../about/index.rst:90
@@ -170,11 +229,14 @@ msgid ""
 "<https://github.com/openownership/data-"
 "standard/blob/master/CONTRIBUTING.md>`__."
 msgstr ""
+"Los colaboradores deben aceptar el `convenio de contribución "
+"<https://github.com/openownership/data-"
+"standard/blob/master/CONTRIBUTING.md>`__."
 
 # d2e9d36247bb4f6a91332ff8810310e0
 #: ../../about/index.rst:95
 msgid "Contact"
-msgstr ""
+msgstr "Contacto"
 
 # 4e75875df4a045c4adf57ad37359447d
 #: ../../about/index.rst:97
@@ -182,3 +244,5 @@ msgid ""
 "For more details about OpenOwnership, please email "
 "support@openownership.org."
 msgstr ""
+"Para saber más sobre OpenOwnership, puede enviar un correo electrónico a "
+"support@openownership.org."
