--- a/docs/locale/es/LC_MESSAGES/about/support.po
+++ b/docs/locale/es/LC_MESSAGES/about/support.po
@@ -3,13 +3,17 @@
 # This file is distributed under the same license as the Beneficial Ownership Data Standard package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Beneficial Ownership Data Standard 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-06-17 11:38+0100\n"
+"POT-Creation-Date: 2019-09-06 12:18+0000\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
+"Last-Translator: Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -17,14 +21,16 @@ msgstr ""
 "Language: es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-# a1fba93e5e67415ea494ae22172a1e0a
+# 90626dc62de64756bc87f14fcda92192
 #: ../../about/support.rst:4
 msgid "Support"
-msgstr ""
+msgstr "Asistencia"
 
-# fc6062a8a5bd4e97b92cf2e260deec7c
+# ca032e807f6a43e8844ee0f3d5e65596
 #: ../../about/support.rst:6
 msgid ""
 "To get support with your BODS implementation contact "
 "support@openownership.org"
 msgstr ""
+"Si desea obtener asistencia para la implementación de su BODS, comuníquese "
+"con support@openownership.org"
