--- a/docs/locale/es/LC_MESSAGES/schema/guidance/index.po
+++ b/docs/locale/es/LC_MESSAGES/schema/guidance/index.po
@@ -3,13 +3,18 @@
 # This file is distributed under the same license as the Beneficial Ownership Data Standard package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Javier Sarquis <sarquis.translations@gmail.com>, 2020
+# Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Beneficial Ownership Data Standard 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-06-17 11:38+0100\n"
+"POT-Creation-Date: 2019-09-06 12:18+0000\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
+"Last-Translator: Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -17,12 +22,12 @@ msgstr ""
 "Language: es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-# 920f0af576e347c9829beb8ee4e718d7
+# ef6b54076647455e960b20ca3a12e4f2
 #: ../../schema/guidance/index.rst:2
 msgid "Technical guidance"
-msgstr ""
+msgstr "Orientación técnica"
 
-# 57c5a6c923ca4287b60b3beeb76c83f0
+# b5ca48396fff4b2d972c24de674fac3e
 #: ../../schema/guidance/index.rst:6
 msgid ""
 "This is v0.2 of the Beneficial Ownership Data Standard. It includes updates "
@@ -31,19 +36,32 @@ msgid ""
 "See the :any:`Changelog <changelog>` and `About <../../about>`_ pages for "
 "more information."
 msgstr ""
+"Esta es la vers. 0.2 del Estándar de Datos sobre Beneficiarios Finales. "
+"Incluye actualizaciones del modelo de datos e información adicional de la "
+"lista de códigos. Cabe señalar a los implementadores que se esperan cambios "
+"a futuro antes de la publicación de la versión 1.0. Consulte las páginas "
+":any:`Registro de modificaciones <changelog>` y `De qué se trata "
+"<../../about>`_ para obtener más información."
 
-# c630f0a93b5b4dcab289841f04c4b422
+# 7c9470659524429995719b95c98370e0
 #: ../../schema/guidance/index.rst:8
 msgid ""
 "**MUST** and **SHOULD** are used in the schema to denote required and "
 "recommended elements of the Standard, as defined in `RFC2119 "
 "<https://tools.ietf.org/html/rfc2119>`_."
 msgstr ""
+"En el esquema, **DEBE** y **DEBERÍA** se usan para denotar elementos "
+"requeridos y recomendados del Estándar, conforme a lo definido en `RFC2119 "
+"<https://tools.ietf.org/html/rfc2119>`_."
 
-# bd224b0beee44a0188c56db1fee7969b
+# 19af0afe00da4fbcbc6bf0d007d6e308
 #: ../../schema/guidance/index.rst:10
 msgid ""
 "This section contains guidance and instruction on preparing and using BODS "
 "data. Along with the :ref:`Schema reference <schema-reference>` it comprises"
 " the core of the data schema specification."
 msgstr ""
+"Esta sección ofrece orientación e instrucciones sobre la preparación y el "
+"uso de los datos basados en BODS. Junto con las :ref:`Referencias del "
+"esquema <schema-reference>` integra el núcleo de la especificación del "
+"esquema de datos."
