--- a/docs/locale/es/LC_MESSAGES/schema/guidance/updating-data.po
+++ b/docs/locale/es/LC_MESSAGES/schema/guidance/updating-data.po
@@ -3,13 +3,18 @@
 # This file is distributed under the same license as the Beneficial Ownership Data Standard package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Javier Sarquis <sarquis.translations@gmail.com>, 2020
+# Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Beneficial Ownership Data Standard 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-06-17 11:38+0100\n"
+"POT-Creation-Date: 2019-09-06 12:18+0000\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
+"Last-Translator: Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -17,12 +22,12 @@ msgstr ""
 "Language: es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-# 5592a27bca6a4d52a611fd44fe103c13
+# 7ced2b70cff34b31ad92032abcd1cd1c
 #: ../../schema/guidance/updating-data.rst:4
 msgid "Updating statements"
-msgstr ""
+msgstr "Actualización de declaraciones"
 
-# 11a7922621034b768343b6d10cc195a6
+# 3225e4bfbd034b3dad6809258ee65189
 #: ../../schema/guidance/updating-data.rst:6
 msgid ""
 "Statements MUST be treated as immutable: once a statement is published it "
@@ -31,11 +36,22 @@ msgid ""
 "one statement should be considered as a replacement for one or more previous"
 " statements."
 msgstr ""
+"Las declaraciones DEBEN tratarse como inalterables: una vez que se publica "
+"una declaración, ésta NO DEBE volver a publicarse con la misma "
+"``identificaciónDeDeclaración`` y diferentes valores de propiedades. La "
+"propiedad ``reemplazaDeclaraciones`` puede usarse para indicar que una "
+"declaración debería considerarse como un reemplazo de una o más "
+"declaraciones anteriores."
 
-# 6e6448cf0acc4434981624e60b0308b7
+# ed2fca3e6c80471b81d3d4f41ef59ecd
 #: ../../schema/guidance/updating-data.rst:8
 msgid ""
 "Therefore, if a particular value needs to be updated, a new statement with a"
 " new ``statementID`` MUST be published and the ``replacesStatements`` "
 "property used to reference the old, out-of-date statement."
 msgstr ""
+"Por lo tanto, si un valor en particular necesita ser actualizado, DEBE "
+"publicarse una nueva declaración con una nueva "
+"``identificaciónDeDeclaración`` y utilizarse la propiedad "
+"``reemplazaDeclaraciones`` para referirse a la antigua declaración "
+"desactualizada."
