--- a/docs/locale/es/LC_MESSAGES/schema/index.po
+++ b/docs/locale/es/LC_MESSAGES/schema/index.po
@@ -3,13 +3,18 @@
 # This file is distributed under the same license as the Beneficial Ownership Data Standard package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Javier Sarquis <sarquis.translations@gmail.com>, 2020
+# Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Beneficial Ownership Data Standard 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-06-17 11:38+0100\n"
+"POT-Creation-Date: 2019-09-06 12:18+0000\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
+"Last-Translator: Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -17,12 +22,12 @@ msgstr ""
 "Language: es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-# 741b04d7dd5d4d5d8e993ede846f8160
+# f9aa9b648ca7477f81807363728e7352
 #: ../../schema/index.rst:2
 msgid "Data Schema"
-msgstr ""
+msgstr "Esquema de datos"
 
-# eae8dd11706844bca27e57fd439ed153
+# af1b828d4df74ac6bab044ebf3054eaf
 #: ../../schema/index.rst:6
 msgid ""
 "This is v0.2 of the Beneficial Ownership Data Standard. It includes updates "
@@ -31,16 +36,25 @@ msgid ""
 "See the :doc:`Changelog <changelog>` and `About <../about>`_ pages for more "
 "information."
 msgstr ""
+"Esta es la vers. 0.2 del Estándar de Datos sobre Beneficiarios Finales. "
+"Incluye actualizaciones del modelo de datos e información adicional de la "
+"lista de códigos. Cabe señalar a los implementadores que se esperan cambios "
+"a futuro antes de la publicación de la versión 1.0. Consulte las páginas "
+":doc:`Registro de modificaciones <changelog>` y `De qué se trata "
+"<../about>`_ para obtener más información."
 
-# 993c599a72e74f17a7a7acb84d75a9b5
+# 2256e57506a7400583ada6ba14caa54f
 #: ../../schema/index.rst:8
 msgid ""
 "**MUST** and **SHOULD** are used in the schema to denote required and "
 "recommended elements of the Standard, as defined in `RFC2119 "
 "<https://tools.ietf.org/html/rfc2119>`_."
 msgstr ""
+"En el esquema, **DEBE** y **DEBERÍA** se usan para denotar elementos "
+"requeridos y recomendados del Estándar, conforme a lo definido en `RFC2119 "
+"<https://tools.ietf.org/html/rfc2119>`_."
 
-# e3b7677b3e6f48128be9f7e2697ff075
+# 9d157762b3e1440a933007c984d8e5be
 #: ../../schema/index.rst:10
 msgid ""
 "BODS provides a common data model for encapsulating information about the "
@@ -51,16 +65,28 @@ msgid ""
 "control by entities (such as companies) by other entities (including trusts "
 "and joint shareholdings) or by natural persons."
 msgstr ""
+"El BODS proporciona un modelo de datos común para encapsular información "
+"sobre los :doc:`beneficiarios finales <../primer/whatisbo>` de entidades "
+"societarias y estructuras jurídicas relacionadas, a fin de facilitar "
+":doc:`el intercambio de información <../primer/whatisthebods>`. En "
+"particular, el :any:`modelo de datos <key-concepts>` registra las relaciones"
+" directas e indirectas de titularidad y control de las entidades (como las "
+"empresas) de otras entidades (incluidos los fideicomisos y las "
+"participaciones accionarias conjuntas) o de personas físicas."
 
-# 116eca9b818e449686675f2a77c7b640
+# 52e63ab835844ba192af0261e02a3b4f
 #: ../../schema/index.rst:12
 msgid ""
 "The data model, as specified here in the Data Schema, is intended to "
 "represent, or help identify, ultimate beneficial ownership: the natural "
 "person(s) who ultimately benefit from, or control, an entity."
 msgstr ""
+"El modelo de datos, tal como se lo especifica aquí en el Esquema de Datos, "
+"tiene por finalidad señalar, o ayudar a identificar, a los beneficiarios "
+"finales en última instancia: la(s) persona(s) física(s) que en última "
+"instancia se beneficia(n) de una entidad o la controlan."
 
-# 485a1c26fcb94f26951a7bed8cbddb36
+# 8119727e30c547ef8ce63d06b2a0cf6d
 #: ../../schema/index.rst:14
 msgid ""
 "The :doc:`schema browser <schema-browser>` provides a way of digging through"
@@ -68,10 +94,17 @@ msgid ""
 " Alternatively, the :doc:`schema reference <reference>` presents these "
 "elements and their descriptions in easy-to-reference tables."
 msgstr ""
+"El :doc:`navegador del esquema <schema-browser>` permite indagar en la "
+"estructura del esquema, mostrando cómo sus componentes y campos encajan "
+"entre sí. Alternativamente, las :doc:`referencias del esquema <reference>` "
+"presentan estos elementos y sus descripciones en tablas de fácil referencia."
 
-# 61dc694c59ec4c9fbb3460920a48b1c5
+# 71d8f65a5d0b4e06885655d9e37d3073
 #: ../../schema/index.rst:16
 msgid ""
 "Further considerations regarding the validation, publishing, and lifecycle "
 "of data are included in `technical guidance <guidance>`_."
 msgstr ""
+"En la `orientación técnica <guidance>`_ se incluyen consideraciones "
+"ulteriores acerca de la validación, la publicación y el ciclo de vida de los"
+" datos."
