--- a/docs/locale/es/LC_MESSAGES/userguides/licensing.po
+++ b/docs/locale/es/LC_MESSAGES/userguides/licensing.po
@@ -3,13 +3,18 @@
 # This file is distributed under the same license as the Beneficial Ownership Data Standard package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Javier Sarquis <sarquis.translations@gmail.com>, 2020
+# Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Beneficial Ownership Data Standard 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-07-01 11:07+0100\n"
+"POT-Creation-Date: 2019-09-06 12:18+0000\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
+"Last-Translator: Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -17,12 +22,12 @@ msgstr ""
 "Language: es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-# 95297f51c5dc430ebdf9683581deb5f2
+# 2d878ae58a8e4a8f90c644f8ead7a470
 #: ../../userguides/licensing.rst:2
 msgid "Licensing considerations"
-msgstr ""
+msgstr "Consideraciones sobre el otorgamiento de licencia"
 
-# 792eee5f02bf49c39d5b72373086a46a
+# 653c69f3d03e4dccab51d7caa85865c1
 #: ../../userguides/licensing.rst:4
 msgid "(TBC)"
-msgstr ""
+msgstr "(pendiente de confirmación)"
