--- a/docs/locale/es/LC_MESSAGES/userguides/updating-data.po
+++ b/docs/locale/es/LC_MESSAGES/userguides/updating-data.po
@@ -3,13 +3,17 @@
 # This file is distributed under the same license as the Beneficial Ownership Data Standard package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Beneficial Ownership Data Standard 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-07-01 11:07+0100\n"
+"POT-Creation-Date: 2019-09-06 12:18+0000\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
+"Last-Translator: Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -17,14 +21,16 @@ msgstr ""
 "Language: es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-# 45411fce42a54affbe372e3001e1277c
+# 3dd15d2816a643e2b4f3acebc10f6c7f
 #: ../../userguides/updating-data.rst:2
 msgid "Updating data"
-msgstr ""
+msgstr "Actualización de datos"
 
-# 9f3dc1accea74a2d98727deaf93d0cc8
+# 337c09a3d8744a47bb916b302dde15d6
 #: ../../userguides/updating-data.rst:4
 msgid ""
 "(New section. Info on best practice in updating, correcting, ‘deleting’ and "
 "republishing data. replacesStatement etc.)"
 msgstr ""
+"(Nueva sección. Información sobre las mejores prácticas para actualizar, "
+"corregir, \"borrar\" y republicar datos. reemplazaDeclaración, etc.)"
